--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "izzielau",
-  "homepage": "http://izzielau.github.io/izzielau.github.io/",
+  "homepage": "http://izzielau.github.io/",
   "version": "0.1.0",
   "description": "The personal website of an Izzie Lau.",
   "main": "src/index.js",
